@@ -3,6 +3,7 @@ Process Hacker
 2.21
  * NEW/IMPROVED:
    * Added Private Bytes Delta column
+   * Added check for debugger in Terminator
  * FIXED:
    * Fixed Show CPU Below 0.01 not respecting locale
    * Fixed copying from network list
